--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <!--title>
           This experiment looks at information seeking and confidence in diagnostic decisions.
     </title> -->
-    <script src="/src/utils.js"></script>
-    <script src="/src/scenarioFile.js"></script>
-    <script src="/src/scenarioFile2.js"></script>
-    <script src="/src/scenarioFileTutorial.js"></script>
-    <script src="/src/src.js"></script>
+    <script src="./src/utils.js"></script>
+    <script src="./src/scenarioFile.js"></script>
+    <script src="./src/scenarioFile2.js"></script>
+    <script src="./src/scenarioFileTutorial.js"></script>
+    <script src="./src/src.js"></script>
     <script type="text/javascript">
         const chars = shuffle(["b","c","d","f","g","h","j","k","l","m","n","p","q","r","s","t","v","w","x","y","z","1","2","3","4","5","6","7","8","9"]);
         const participantID = (chars.slice(1,7)).join('');
@@ -22,17 +22,17 @@
         }
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/jspsych/dist/jspsych.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-image-button-response.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-instructions.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-survey-multi-choice.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-survey-multi-select.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-survey-multi-select-limit-sliders.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-survey-text.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-canvas-slider-response.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-canvas-slider-response-with-buttons.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-free-text-ranked-list.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="../style/styleIST.css"/>
+    <script src="./jspsych/dist/jspsych.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-image-button-response.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-instructions.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-survey-multi-choice.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-survey-multi-select.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-survey-multi-select-limit-sliders.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-survey-text.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-canvas-slider-response.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-canvas-slider-response-with-buttons.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-free-text-ranked-list.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./style/styleIST.css"/>
     <link rel="shortcut icon" href="#" />
 </head>
 <body class="jspsych-display-element" tabindex="0" style="margin: 0; height: 100%; width: 100%;">
