--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <!--title>
           This experiment looks at information seeking and confidence in diagnostic decisions.
     </title> -->
-    <script src="/src/utils.js"></script>
-    <script src="/src/scenarioFile.js"></script>
-    <script src="/src/scenarioFile2.js"></script>
-    <script src="/src/scenarioFileTutorial.js"></script>
-    <script src="/src/src.js"></script>
+    <script src="./src/utils.js"></script>
+    <script src="./src/scenarioFile.js"></script>
+    <script src="./src/scenarioFile2.js"></script>
+    <script src="./src/scenarioFileTutorial.js"></script>
+    <script src="./src/src.js"></script>
     <script type="text/javascript">
         const chars = shuffle(["b","c","d","f","g","h","j","k","l","m","n","p","q","r","s","t","v","w","x","y","z","1","2","3","4","5","6","7","8","9"]);
         const participantID = (chars.slice(1,7)).join('');
@@ -22,17 +22,17 @@
         }
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/jspsych/dist/jspsych.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-image-button-response.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-instructions.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-survey-multi-choice.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-survey-multi-select.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-survey-multi-select-limit-sliders.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-survey-text.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-canvas-slider-response.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-canvas-slider-response-with-buttons.js" type="text/javascript"></script>
-    <script src="/jspsych/dist/plugin-free-text-ranked-list.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="../style/styleIST.css"/>
+    <script src="./jspsych/dist/jspsych.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-image-button-response.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-instructions.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-survey-multi-choice.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-survey-multi-select.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-survey-multi-select-limit-sliders.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-survey-text.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-canvas-slider-response.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-canvas-slider-response-with-buttons.js" type="text/javascript"></script>
+    <script src="./jspsych/dist/plugin-free-text-ranked-list.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./style/styleIST.css"/>
     <link rel="shortcut icon" href="#" />
 </head>
 <body class="jspsych-display-element" tabindex="0" style="margin: 0; height: 100%; width: 100%;">
@@ -51,9 +51,7 @@
     // (If there are comments next to the variable setting, you can change it.)
     // (If no comments, that variable is not functional yet so LEAVE IT AS IS!)
 
-    const betaTest = true; // If true, only shows a single trial
     const doInstruct = true; // If true, shows instructions.
-    const doTutorial = true; // If true, shows tutorial of how to use platform.
     const doQuestionnaire = true; // If true, includes questionnaires. 
     const demoQuestions = false; // If true, asks participants for age, gender and medical experience.
     const doDebrief = false; // If true, run debrief questionnaire at the end.
@@ -65,7 +63,7 @@
     const numOfInformationStages = 4; // Number of stages that infomration is presented in. Only relevant if informationStages is true.
     const pastInformationAvailable = true; // If true, at each information stage, all information from the previous stage is available to view. If false, only the current stage's information is available.
     const randomiseTestOrder = true; // If true, shuffles the order of tests shown on screen for each trial and information stage. If false, the order is fixed to the order in which tests are shown in the scenario files.
-    const runTutorial = false; // If true, runs a tutorial for the experiment before the main trials.
+    const runTutorial = true; // If true, runs a tutorial for the experiment before the main trials.
 
     const endRedirectURL = 'https://bbc.co.uk'; //What URL to redirect to after the experiment.
 
@@ -281,12 +279,12 @@
         require_movement: false,
         prompt: "<p>Record how confident you are that you would be ready to start treating this patient.</p>",
         response_ends_trial: true,
-        text_prompt: "Record your treatment plan below.",
-        text_placeholder: "Input your treatment plan (eg what further tests you would run, any advice or documentation you would seek)",
+        text_prompt: "Record your management plan below.",
+        text_placeholder: "Input your management plan (eg what further tests you would run, any advice or documentation you would seek)",
         text_rows: 10,
         text_columns: 30,
-        text_name: "TreatmentPlan",
-        scale_label: "Ready to Treat",
+        text_name: "ManagementPlan",
+        scale_label: "Ready to Begin Management Plan",
         on_load: ()=>{
             exp.fullscreenMode();
         },
@@ -301,14 +299,14 @@
         stimulus: '',
         labels: ["Not At All Confident", "Fully Confident"],
         require_movement: false,
-        prompt: "<p>Once you have recorded your diagnosis list, you should indicate using the slider how confident you are that you have the information you would need to be ready to treat this patient.</p><p>Bear in mind that there are three stages of information gathering left for this patient, so it is fine to not be very confident yet! Make sure that you are recording your confidence as accurately as possible: try not to be overconfident or underconfident.</p>",
+        prompt: "<p>Once you have recorded your diagnosis list, you should indicate using the slider how confident you are that you have the information you would need to begin your management plan.</p><p>Bear in mind that there are three stages of information gathering left for this patient, so it is fine to not be very confident yet! Make sure that you are recording your confidence as accurately as possible: try not to be overconfident or underconfident.</p>",
         response_ends_trial: true,
-        text_prompt: "Record your treatment plan below.",
-        text_placeholder: "Input your treatment plan (eg what further tests you would run, any advice or documentation you would seek)",
+        text_prompt: "Record your management plan below.",
+        text_placeholder: "Input your management plan (eg what further tests you would run, any advice or documentation you would seek)",
         text_rows: 10,
         text_columns: 30,
-        text_name: "TreatmentPlan",
-        scale_label: "Ready to Treat",
+        text_name: "ManagementPlan",
+        scale_label: "Ready to Begin Management Plan",
         hide_checkbox: true,
         on_load: ()=>{
             exp.fullscreenMode();
@@ -362,7 +360,7 @@
     const differentialDiagnosesTutorial = 
     {
         type: jsPsychFreeTextRankedList,
-        prompt: "<p>At the end of each information stage, you will record a list of differential diagnoses for this patient.</p><p>Click the plus icon to add a diagnosis to the list. For each differential, you will record how severe this condition could be (Mild, Moderate or Severe) and how likely that diagnosis is on a scale of 1-10.</p><p>Try adding some diagnoses! Once you are done with your list, click Continue. Make sure that you have provided severity and likelihood for all diagnoses before doing so.</p>",
+        prompt: "<p>At the end of each information stage, you will record a list of differential diagnoses for this patient.</p><p>Click the plus icon to add a diagnosis to the list. Once you type in the diagnosis, click the plus again or Enter on your keyboard. For each differential, you will record how severe this condition could be (Mild, Moderate or Severe) and how likely that diagnosis is on a scale of 1-10.</p><p>Try adding some diagnoses! Once you are done with your list, click Continue. Make sure that you have provided severity and likelihood for all diagnoses before doing so.</p>",
         slider_labels: ["Not At All Likely", "Extremely Likely"],
         slider_start: 5,
         slider_prompt: "Likelihood",
@@ -587,14 +585,14 @@
             stimulus: '',
             labels: ["Not At All Confident", "Fully Confident"],
             require_movement: false,
-            prompt: "<p>As before, you can record your confidence using the slider</p><p><strong>If you believe you are ready to start treating the patient, you can check the box below that says 'Ready to Treat'.</strong> If you do, you will be asked to record what your treatment plan would be. Please include details such as any escalations you would make, any further tests you would run, consultants/specialists or documentation you would consult and generally what your immediate course of action would be.</p><p>For the real cases, this checkbox will be available during all four information stages, <strong>but please use this only when you are definitely sure you are ready to treat the patient.</strong></p>",
+            prompt: "<p>As before, you can record your confidence using the slider</p><p><strong>If you believe you are ready to start treating the patient, you can check the box below that says 'Ready to Begin Management Plan'.</strong> You will also be asked to record what your management plan would be. Please include details such as any escalations you would make, any further tests you would run, consultants/specialists or documentation you would consult and generally what your immediate course of action would be.</p><p>For the real cases, this checkbox will be available during all four information stages, <strong>but please use this only when you are definitely sure about your management plan</strong></p>",
             response_ends_trial: true,
-            text_prompt: "Record your treatment plan below.",
-            text_placeholder: "Input your treatment plan (eg what further tests you would run, any advice or documentation you would seek)",
+            text_prompt: "Record your management plan below.",
+            text_placeholder: "Input your management plan (eg what further tests you would run, any advice or documentation you would seek)",
             text_rows: 10,
             text_columns: 30,
-            text_name: "TreatmentPlan",
-            scale_label: "Ready to Treat",
+            text_name: "ManagementPlan",
+            scale_label: "Ready to Begin Management Plan",
             hide_checkbox: false,
             on_load: ()=>{
                 exp.fullscreenMode();
@@ -676,8 +674,8 @@
             text_placeholder: "Input your treatment plan (eg what further tests you would run, any advice or documentation you would seek)",
             text_rows: 10,
             text_columns: 30,
-            text_name: "TreatmentPlan",
-            scale_label: "Ready to Treat",
+            text_name: "ManagementPlan",
+            scale_label: "Ready to Begin Management Plan",
             hide_checkbox: false,
             on_load: ()=>{
                 exp.fullscreenMode();
