Bug Fixes to Experiment
- Fixed prompts and trial info (as it looked like it was looping the first trial)
- Updated scenario files

--- a/consent.html
+++ b/consent.html
@@ -149,7 +149,7 @@
         let participantID = window.location.search.match('[?&]ParticipantID=\\w+');
         if(participantID !== null)
         participantID = participantID[0].substring(15);
-        redirectURL = "/" + page + "?consent=true";
+        redirectURL = "https://acclab.psy.ox.ac.uk/~saiyer/DiagnosisParadigm?consent=true";
         if(participantID !== null)
             redirectURL += "&ParticipantID=" + participantID;
         window.location.href =  redirectURL; // forward as if user clicked a link
